# actions-scanner

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  GEMINI.md  LICENSE  README.adoc  README.md  orgs.txt  pyproject.toml
.github/workflows/: ci.yml  publish.yml
rules/: artifact-injection.yaml  context-injection.yaml  dispatch-checkout.yaml  pwnrequest.yaml  workflow-run.yaml
skills/actions-scanner/: SKILL.md
src/actions_scanner/: __init__.py
src/actions_scanner/cli/: __init__.py  main.py
src/actions_scanner/config/: __init__.py  settings.py
src/actions_scanner/core/: __init__.py  detector.py  models.py  patterns.py
src/actions_scanner/enrichment/: __init__.py  base.py  github_users.py  ldap.py
src/actions_scanner/git/: __init__.py  branch.py  clone.py  multibranch.py  worktree.py
src/actions_scanner/github/: __init__.py  client.py  mergers.py
src/actions_scanner/reporting/: __init__.py  csv.py  json.py  markdown.py
src/actions_scanner/utils/: __init__.py  async_helpers.py  console.py  path.py  progress.py
src/actions_scanner/validation/: __init__.py  agent.py  models.py  prompts.py
tests/: conftest.py  test_cli.py  test_config.py  test_detector.py  test_path_utils.py  test_validation.py
tests/fixtures/fake_repo/.github/workflows/: actor_gated.yml  base_branch_checkout.yml  label_gated.yml  merged_pr_gated.yml  no_checkout.yml  pip_install.yml  pwn_request.yml  same_repo_gated.yml
tests/fixtures/workflows/protected/: environment_gated.yml  label_gated_github_script.yml  label_gated_no_toctou.yml  permission_gated.yml  sender_login_gated.yml  workflow_run_repo_validated.yml
tests/fixtures/workflows/safe/: context_injection_safe.yml  context_injection_safe_comment_user_login.yml  context_injection_safe_user_login.yml  dispatch_checkout_safe.yml  no_dangerous_exec.yml  workflow_run_safe.yml  workflow_run_sonar.yml
tests/fixtures/workflows/vulnerable/: artifact_injection.yml  context_injection_issues.yml  context_injection_pr_target.yml  context_injection_workflow_run.yml  dispatch_checkout.yml  git_fetch_pr.yml  local_action.yml  refs_pull_merge.yml  step_output_ref.yml  workflow_run.yml  workflow_run_combined.yml
