[project]
name = "actions-scanner"
version = "1.0.0"
description = "GitHub Actions vulnerability scanner for PwnRequest attacks"
readme = {file = "README.adoc", content-type = "text/plain"}
license = { text = "MIT" }
requires-python = ">=3.11"
authors = [{ name = "Katie Mulliken", email = "mulliken@redhat.com" }]
keywords = ["github", "actions", "security", "vulnerability", "scanner"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: Information Technology",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Security",
    "Topic :: Software Development :: Quality Assurance",
    "Typing :: Typed",
]

dependencies = [
    "click>=8.1.7",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    "pyyaml>=6.0.1",
    "rich>=13.7.0",
    "aiohttp>=3.9.0",
    "aiofiles>=23.2.0",
]

[project.optional-dependencies]
ldap = ["ldap3>=2.9.1"]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
    "ruff>=0.4.0",
    "ty>=0.0.1",
    "aioresponses>=0.7.0",
    "pre-commit>=3.6.0",
]
all = ["actions-scanner[ldap,dev]"]

[project.scripts]
actions-scanner = "actions_scanner.cli.main:main"

[project.urls]
Homepage = "https://github.com/SecKatie/actions-scanner"
Documentation = "https://github.com/SecKatie/actions-scanner#readme"
Repository = "https://github.com/SecKatie/actions-scanner"
Issues = "https://github.com/SecKatie/actions-scanner/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/actions_scanner"]

[tool.hatch.build.targets.sdist]
include = [
    "/src",
    "/tests",
    "/README.adoc",
]

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "F",      # pyflakes
    "I",      # isort
    "N",      # pep8-naming
    "W",      # pycodestyle warnings
    "UP",     # pyupgrade
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "SIM",    # flake8-simplify
    "TCH",    # flake8-type-checking
    "RUF",    # ruff-specific rules
]
ignore = [
    "E501",   # line too long (handled by formatter)
]

[tool.ruff.lint.isort]
known-first-party = ["actions_scanner"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
markers = [
    "slow: marks tests as slow",
    "integration: marks tests as integration tests",
]
filterwarnings = [
    "ignore::DeprecationWarning",
]

[tool.coverage.run]
source = ["src/actions_scanner"]
branch = true
omit = ["*/tests/*", "*/__pycache__/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
    "@abstractmethod",
]
show_missing = true
